# chess

./: chess.cabal
src/Chess/: Board.hs  Move.hs  Piece.hs
