cabal-version:      2.4
name:               chess
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Max Niederman
maintainer:         max@maxniederman.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    default-language: Haskell2010

    exposed-modules:
        Chess.Board
        Chess.Piece
        Chess.Move
    
    other-modules:
    
    build-depends:
        base ^>= 4.15.1.0,
        transformers ^>= 0.6.0.6,
        vector ^>= 0.13.0.0

executable chess
    hs-source-dirs:   app
    default-language: Haskell2010

    main-is:          Main.hs

    build-depends:
        base ^>= 4.15.1.0,
        chess
